--- a/style.css
+++ b/style.css
@@ -110,3 +110,35 @@ div button:hover{
     color: slateblue;
     border: 1px solid slateblue;
 }
+.btn:hover{
+    background: var(--blue);
+}
+
+.
+.services .box-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(27rem, 1fr));
+    gap:1.5rem;
+}
+
+.services .box-container .box{
+    text-align: center;
+    border:var(--border);
+    box-shadow: var(--box-shadow);
+}
+
+.services .box-container .box img{
+    height: 8rem;
+}
+
+.services .box-container .box h3{
+    font-size: 2.3rem;
+    color:var(--black);
+}
+
+.services .box-container .box p{
+    font-size: 1.4rem;
+    color:var(--light-color);
+    padding:1rem 0;
+    line-height: 1.8;
+}
