--- a/style.css
+++ b/style.css
@@ -7,9 +7,9 @@ body{
     padding: 0px;
     margin: 0px;
     font-size: 16px;
-    color: #000;
+    color: #fff;
     
-    background-color: #fff;
+    background-color: #121212;
     background-size: cover;
 }
 
@@ -81,7 +81,7 @@ div h3{
 
 div button{
     background-color: #000;
-    color: white;
+    color: #FFD36A;
     border: 0px  black;
     border-radius: 5px;
     padding: 15px;
@@ -94,8 +94,8 @@ div button{
 }
 
 div button:hover{
-    background-color: white;
-    color: #000;
+    background-color: #000;
+    color: #FFD36A;
     border: 1px solid white;
 }
 
