--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ div h3{
     display: block;
     border: 1px solid #ccc;
     border-radius: 5px;
-    background-color: white;
+    background-color: #121212;
     padding: 15px;
     outline: none;
     width: 100%;
