--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body{
     font-size: 16px;
     color: #fff;
     
+    
     background-color: #121212;
     background-size: cover;
 }
@@ -101,7 +102,7 @@ div button:hover{
 
 #signup{
     background: #FFD36A;
-    color: #000;
+    color: #fff;
     border: 1px solid snow;
 }
 
