--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ body{
 a{
     text-decoration: none;
     color:#FFD36A;
+
 }
 
 input, button{
@@ -38,7 +39,7 @@ input, button{
 
 
 div{
-    width: 85%;
+    width: 92%;
     margin: 0px auto;
     margin-top: 0px;
     padding: 0px;
@@ -51,8 +52,8 @@ div{
 
 #profilepic{
     display: block;
-    width: 150px;
-    height: 150px;
+    width: 100px;
+    height: 100px;
 
     margin-left: auto;
     margin-right: auto;
@@ -75,7 +76,7 @@ div h3{
     border-radius: 5px;
     padding: 12px;
     outline: none;
-    color:white;
+    color:black;
     width: 260px;
     margin-bottom: 15px;
 
