--- a/style1.css
+++ b/style1.css
@@ -320,8 +320,8 @@ main {
 
 .circle {
   position: relative;
-  width: 85px;
-  height: 85px;
+  width: 80px;
+  height: 80px;
 }
 .circle svg {
   fill: none;
@@ -346,7 +346,7 @@ main {
     stroke-dasharray: 1;
   }
   to {
-    stroke: #fff;
+    stroke: #121212 ;
     transform: rotate(180deg);
     stroke-dasharray: 8;
   }
@@ -488,12 +488,12 @@ main {
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  padding: 0 10px;
+  padding: 0px 10px;
 }
 
 .navbar-link {
   color: var(--light-gray);
-  font-size: var(--fs-8);
+  font-size: 13px;
   padding: 20px 7px;
   transition: color var(--transition-1);
 }
@@ -530,7 +530,7 @@ main {
 
 .service { margin-bottom: 35px; }
 
-.service-title { margin-bottom: 20px; }
+.service-title { margin-bottom: 20px;}
 
 .service-list {
   display: grid;
@@ -566,7 +566,7 @@ main {
 
 .service-item-text {
   color: var(--light-gray);
-  font-size: var(--fs-6);
+  font-size: 13px;
   font-weight: var(--fw-3);
   line-height: 1.6;
 }
