--- a/styleg.css
+++ b/styleg.css
@@ -2,7 +2,7 @@
 *,
 *:before,
 *:after {
-  padding: 0;
+  padding: 0px;
   margin: 0;
   box-sizing: border-box;
   outline: none;
@@ -27,7 +27,7 @@ a {
 .container {
   display: grid;
   place-items: center;
-  height: 100vh;
+  height: 80vh;
   width: 100vw;
 }
 
@@ -78,7 +78,7 @@ a {
 }
 .video-player {
   position: relative;
-  height: 100%;
+  height: 100%%;
   width: 100%;
 }
 .video-player::before {
