--- a/styleg.css
+++ b/styleg.css
@@ -23,19 +23,15 @@ a {
   cursor: pointer;
 }
 
-/* main styling */
-.container {
-  display: grid;
-  place-items: center;
-  height: 93vh;
-  width: 100vw;
-}
+
 
 .video-container {
   position: relative;
   border-radius: 10px;
   height:490px;
   width: 330px;
+  border-radius: 4px;
+  border: 1px solid #FFD36A ;
   box-shadow: 0 0 50px #000;
   margin: auto;
   overflow: scroll;
@@ -117,7 +113,7 @@ a {
 }
 .post-footer .username .username-link::before {
   content: "@ ";
-  color: #fff;
+  color: #FFD36A ;
 }
 .verfied .verfied-icon,
 .post-comment-user-verified {
@@ -305,59 +301,19 @@ video.post-video {
 /* follow me */
 
 body {
-  background:#121212;
+  background: #121212 ;
   background-size: 250% 250%;
   display: grid;
   place-items: center;
   font-size: 20px;
-  color: #000;
+  color: #FFD36A ;
   cursor: pointer;
   animation: gradient 1s ease infinite;
 }
-.follow-me {
-  position: relative;
-  background: #fff;
-  color: #000;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 5px;
-  width: 50px;
-  height: 50px;
-  position: fixed;
-  top: 50%;
-  right: 30px;
-  transform: translate(-50%);
-  text-align: center;
-  z-index: 3;
-}
 
-.follow-me::before {
-  content: "Contact me";
-  position: absolute;
-  top: -40px;
-  left: 50%;
-  width: 150px;
-  text-align: center;
-  transform: translate(-50%);
-  background-color: #fff;
-  border-radius: 5px;
-  font-size: 15px;
-  padding: 5px;
-}
-.follow-me::after {
-  content: "";
-  position: absolute;
-  top: -13px;
-  left: 50%;
-  height: 0;
-  width: 0;
-  text-align: center;
-  transform: translate(-50%);
-  border-top: 10px #fff solid;
-  border-right: 10px transparent solid;
-  border-left: 10px transparent solid;
-}
+
+
+
 
 @keyframes gradient {
   0% {
