--- a/styleg.css
+++ b/styleg.css
@@ -34,6 +34,7 @@ a {
   border: 1px solid #FFD36A ;
   box-shadow: 0 0 50px #000;
   margin: 50px;
+  padding:15px;
   overflow: scroll;
   scroll-snap-type: y mandatory;
   scroll-snap-align: center;
@@ -129,6 +130,7 @@ a {
 .post-description {
   padding-left: 10px;
   font-size: 10px;
+  background:#000;
 }
 .disc-logo {
   position: absolute;
