--- a/styleg.css
+++ b/styleg.css
@@ -33,7 +33,9 @@ a {
   border-radius: 4px;
   border: 1px solid #FFD36A ;
   box-shadow: 0 0 50px #000;
-  margin: 25px;
+  margin: 30px;
+  margin-left:auto;
+  margin-right:auto;
   overflow: scroll;
   scroll-snap-type: y mandatory;
   scroll-snap-align: center;
