--- a/styleforvips.css
+++ b/styleforvips.css
@@ -1,4 +1,3 @@
-<style>
 :root {
   --plyr-color-main: #009227;
 }
@@ -261,5 +260,7 @@ border: 1px solid #FFD36A;
 a{
 	font-size:10px;
 	} 
-
-</style>
+	video{
+	width: 100%;
+  height:100%;
+	} 
