--- a/note.css
+++ b/note.css
@@ -1,61 +1,3 @@
-.mainbody{
-	background-image: url(https://www.washingtonpost.com/resizer/NcD-eYjEnEEcTDnS1GZelQtAK5c=/1484x0/arc-anglerfish-washpost-prod-washpost.s3.amazonaws.com/public/YBDXXTEX7JFCJP4JGBPBCIVLDU.jpg);
-	vertical-align: center;
-	align-content: center;
-	background-size: cover;
-}
-
-#addTxt{
-	border-radius: 10px;
-
-}
-#nothing{
-	text-align: center;
-}
-.mainbody2{
-	background-color: #D3D3D3;
-}
-.container my-3{
-	background-color: grey;
-}
-#Heading{
-	text-align: center;
-}
-#jumbo
-{
-	background-color:  rgb(255, 204, 255);
-	padding: auto;
-	align-content: center;
-	vertical-align: center;
-	margin: auto;
-	margin-top: 100px;
-	height: 500px;
-	width: 450px;
-}
-
-#special
-{
-	background-color:  rgb(255, 204, 255);
-	padding: auto;
-	align-content: center;
-	vertical-align: center;
-	margin: auto;
-	margin-top: 100px;
-	height: 500px;
-	width: 450px;
-}
-
-
-.display-4{
-	text-align: center;
-}
-.card-footer{
-	font-size:medium;
-	font-style: italic;
-	display: block;
-	text-align: right;
-    
-}
 .card{
     opacity: 0.85;
     margin: 2em;
@@ -63,3 +5,43 @@
     color: white;
 }
 
+.btn{
+    margin-left: 0.25em;
+}
+
+.dis{
+    border: 0.5mm solid black;
+    /* border-radius: 50%; */
+}
+
+h3{
+    margin: 0.25em;
+    display: inline;
+}
+
+footer{
+    color: white;
+    background-color: #0d6efd;
+    margin: 1em;
+    padding: 1em;
+}
+
+body{
+    background-image: url('./images/home.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: fixed;
+}
+
+#features{
+    color: white;
+}
+
+#instr{
+    color: white;
+}
+
+ul{
+    color: white; 
+}
